hphp/test/slow/parser/colon_colon_class_include_parent.php.expectf

Fatal error: Cannot access parent::class when no class scope is active in %s/test/slow/parser/colon_colon_class_include_parent.inc on line 2
